Fix x axis overflow on mobile devices

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -173,7 +173,6 @@ body {
   justify-content: space-between;
   flex-wrap: wrap;
   width: calc(90% + 32px);
-  padding: 15px;
 }
 
 .work-project-item{
@@ -289,6 +288,7 @@ body {
     text-shadow: $box-shadow;
     z-index: 2;
     user-select: none;
+    text-align: center;
   }
 
   &::after{
